--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gammer</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <!-- nabbar section -->
+    <header>
+        <nav>
+            <div class="nav-container">
+                <div class="nav-icon-section">
+                    <img src="images/Frame.png" alt="nav-icon">
+                    <h1 class="nav-title"><span class="purple">G</span>amer</h1>
+                </div>
+                <div class="nav-item-section">
+                    <ul>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Developers</a></li>
+                        <li class="follow-us"><a href="">Follow Us On</a> <i class="fa-brands fa-youtube"></i><i class="fa-brands fa-tiktok"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="banner-container">
+            <div class="banner-content">
+                <h2 class="banner-title-1">Play Like The</h2>
+                <h1>G.O.A.T.</h1>
+                <ul>
+                    <li><span><i class="fa-regular fa-circle-play"></i></span>1-Click instant play</li>
+                    <li><span><i class="fa-solid fa-arrow-down"></i></span>No Download</li>
+                    <li><span><i class="fa-solid fa-user-group"></i></span>1000s of supported online games</li>
+                </ul>
+                <div class="btn-container">
+                    <button class="btn-primary sign-in">Sign In</button>
+                    <button class="btn-primary go-rogue">Go Rogue</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </div>
+    </header>
+   
+    <main>
+
+    </main>
 </body>
+
 </html>
