card section done

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
         </nav>
+        <!-- banner section -->
         <div class="banner-container">
             <div class="banner-content">
                 <h2 class="banner-title-1">Play Like The</h2>
@@ -46,9 +47,54 @@
             </div>
         </div>
     </header>
-   
+    <!-- main section -->
     <main>
+        <section>
+            <div class="gammer-container">
+                <div class="gammer-img-container">
+                    <img class="" src="images/pngwing 4.png" alt="">
+                </div>
+                <div class="gammer-content">
+                    <h1>We are gamer</h1>
+                    <p class="gammer-content-desc">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                    <div class="know-more-container">
+                        <button class="btn-primary know-more">know more</button>
+                    </div>
+                    <p class="purpose-text">Our purpose...<br>
+                        <span class="unleash">“unleash the gamer in everyone”</span></p>
+                </div>
+            </div>
+        </section>
 
+
+        <section>
+            <div class="video-container">
+                <h1>Online Games <span class="funny-video">Funny Videos</span></h1>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="card ">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <!-- <div class="overlay">
+                            <i class="fa-regular fa-circle-play"></i>
+                            <h4 class="btn-primary">Watch Now</h4>
+                          </div> -->
+                    <p>Breaking game records like OG</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
