icon section start

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gammer</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -22,7 +24,8 @@
                     <ul>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Developers</a></li>
-                        <li class="follow-us"><a href="">Follow Us On</a> <i class="fa-brands fa-youtube"></i><i class="fa-brands fa-tiktok"></i></li>
+                        <li class="follow-us"><a href="">Follow Us On</a> <i class="fa-brands fa-youtube"></i><i
+                                class="fa-brands fa-tiktok"></i></li>
                     </ul>
                 </div>
             </div>
@@ -56,7 +59,9 @@
                 </div>
                 <div class="gammer-content">
                     <h1>We are gamer</h1>
-                    <p class="gammer-content-desc">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                    <p class="gammer-content-desc">An international digital games and entertainment company. We develop,
+                        publish and distribute multiplayer mobile games. We reach over 400 million players each month
+                        and our audience keeps growing.</p>
                     <div class="know-more-container">
                         <button class="btn-primary know-more">know more</button>
                     </div>
@@ -67,6 +72,8 @@
         </section>
 
 
+
+        <!-- card section  -->
         <section>
             <div class="video-container">
                 <h1>Online Games <span class="funny-video">Funny Videos</span></h1>
@@ -74,11 +81,11 @@
                 <div class="card-container">
                     <div class="card">
                         <img src="images/Rectangle 4.png" alt="">
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                        <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                     </div>
                     <div class="card">
                         <img src="images/Rectangle 5.png" alt="">
-                    <p>Did you score? #unblockedgames #school</p>
+                        <p>Did you score? #unblockedgames #school</p>
                     </div>
                     <div class="card ">
                         <img src="images/Rectangle 7.png" alt="">
@@ -86,12 +93,71 @@
                             <i class="fa-regular fa-circle-play"></i>
                             <h4 class="btn-primary">Watch Now</h4>
                           </div> -->
-                    <p>Breaking game records like OG</p>
+                        <p>Breaking game records like OG</p>
                     </div>
                     <div class="card">
                         <img src="images/Rectangle 6.png" alt="">
-                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                        <p>Busted gaming on school laptop, but you are still lit.</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- feature section -->
+        <section>
+            <div class="features-container">
+                <div class="feature-description">
+                  <div>
+                    <h1><span class="play">Play Instantly,</span><br>No Downloads <br>No Installs.</h1>
+                    <p>Play games online for free without <br> downloading. Just click the Play button <br>and play instantly in your browser.</p>
+                  </div>
+                </div>
+                <div class="feature-img">
+                    <img src="images/Rectangle 55.png" alt="">
+                    <div class="moveable-img">
+                        <img src="images/Rectangle 66.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="icon-section">
+                <div class="icon">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <p>Action Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 12.png" alt="">
+                    <p>Adventure Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 13.png" alt="">
+                    <p>Arcade Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 14.png" alt="">
+                    <p>Educational Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 15.png" alt="">
+                    <p>Word Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 16.png" alt="">
+                    <p>Role Palying Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 17.png" alt="">
+                    <p>Music & Audio Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 18.png" alt="">
+                    <p>Puzzle Games</p>
+                </div>
+                <div class="icon">
+                    <img src="images/Rectangle 19.png" alt="">
+                    <p>Strategy Games</p>
                 </div>
             </div>
         </section>
