--- a/index.html
+++ b/index.html
@@ -33,19 +33,22 @@
         <!-- banner section -->
         <div class="banner-container">
             <div class="banner-content">
-                <h2 class="banner-title-1">Play Like The</h2>
-                <h1>G.O.A.T.</h1>
-                <ul>
-                    <li><span><i class="fa-regular fa-circle-play"></i></span>1-Click instant play</li>
-                    <li><span><i class="fa-solid fa-arrow-down"></i></span>No Download</li>
-                    <li><span><i class="fa-solid fa-user-group"></i></span>1000s of supported online games</li>
-                </ul>
-                <div class="btn-container">
-                    <button class="btn-primary sign-in">Sign In</button>
-                    <button class="btn-primary go-rogue">Go Rogue</button>
+                <div>
+                        <h2 class="banner-title-1">Play Like The</h2>
+                    <h1>G.O.A.T.</h1>
+                    <ul>
+                        <li><span><i class="fa-regular fa-circle-play"></i></span>1-Click instant play</li>
+                        <li><span><i class="fa-solid fa-arrow-down"></i></span>No Download</li>
+                        <li><span><i class="fa-solid fa-user-group"></i></span>1000s of supported online games</li>
+                    </ul>
+                    <div class="btn-container">
+                        <button class="btn-primary sign-in">Sign In</button>
+                        <button class="btn-primary go-rogue">Go Rogue</button>
+                    </div>
                 </div>
+                
             </div>
-            <div class="banner-img">
+            <div class="banner-img-container">
                 <img src="images/Group 18.png" alt="">
             </div>
         </div>
@@ -121,7 +124,7 @@
             </div>
         </section>
 
-        <section>
+     <section>
             <div class="icon-section">
                 <div class="icon">
                     <img src="images/Rectangle 11.png" alt="">
@@ -160,8 +163,42 @@
                     <p>Strategy Games</p>
                 </div>
             </div>
-        </section>
+        </section> 
     </main>
+    <footer>
+        <div class="footer-container">
+            <div>
+                <div class="footer-title">
+                    <img src="images/Frame.png" alt="">
+                    <h2><span>G</span>amer</h2>
+                </div>
+                <div class="footer-service">
+                    <h5>Our Story</h5>
+                    <h5>Games</h5>
+                    <h5>Web Games</h5>
+                    <h5>Careers</h5>
+                    <h5>Support</h5>
+                    <h5>My Account</h5>
+                </div>
+                <div class="footer-icon">
+                    <div><i class="fa-brands fa-twitter fa-2x"></i></div>
+                    <div><i class="fa-brands fa-facebook fa-2x"></i></div>
+                    <div><i class="fa-brands fa-youtube fa-2x"></i></div>
+                    <div><i class="fa-brands fa-linkedin fa-2x"></i></div>
+                    <div><i class="fa-brands fa-instagram fa-2x"></i></div>
+                    <div><i class="fa-brands fa-apple fa-2x"></i></div>
+                </div>
+                <div class="footer-text">
+                    <p>Terms and Conditions</p>
+                    <p>Privacy Policy</p>
+                    <p>Cookie Policy</p>
+                    <p>Privacy Settings</p>
+                </div>
+                <p class="copy-right">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
+          
+        </div>
+    </footer>
 </body>
 
 </html>
