--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="banner-container">
             <div class="banner-content">
                 <div>
-                        <h2 class="banner-title-1">Play Like The</h2>
+                    <h2 class="banner-title-1">Play Like The</h2>
                     <h1>G.O.A.T.</h1>
                     <ul>
                         <li><span><i class="fa-regular fa-circle-play"></i></span>1-Click instant play</li>
@@ -47,7 +47,7 @@
                         <button class="btn-primary go-rogue">Go Rogue</button>
                     </div>
                 </div>
-                
+
             </div>
             <div class="banner-img-container">
                 <img src="images/Group 18.png" alt="">
@@ -92,11 +92,13 @@
                         <p>Did you score? #unblockedgames #school</p>
                     </div>
                     <div class="card ">
-                        <img src="images/Rectangle 7.png" alt="">
-                        <!-- <div class="overlay">
-                            <i class="fa-regular fa-circle-play"></i>
-                            <h4 class="btn-primary">Watch Now</h4>
-                          </div> -->
+                        <div class="overly-container">
+                            <img src="images/Rectangle 7.png" alt="">
+                            <div class="overlay">
+                                <div><i class="fa-regular fa-circle-play fa-2x"></i></div>
+                                <h4 style="color: #FF42A5; margin-left: 5px;">Watch Now</h4>
+                            </div>
+                        </div>
                         <p>Breaking game records like OG</p>
                     </div>
                     <div class="card">
@@ -111,10 +113,11 @@
         <section>
             <div class="features-container">
                 <div class="feature-description">
-                  <div>
-                    <h1><span class="play">Play Instantly,</span><br>No Downloads <br>No Installs.</h1>
-                    <p>Play games online for free without <br> downloading. Just click the Play button <br>and play instantly in your browser.</p>
-                  </div>
+                    <div>
+                        <h1><span class="play">Play Instantly,</span><br>No Downloads <br>No Installs.</h1>
+                        <p>Play games online for free without <br> downloading. Just click the Play button <br>and play
+                            instantly in your browser.</p>
+                    </div>
                 </div>
                 <div class="feature-img">
                     <img src="images/Rectangle 55.png" alt="">
@@ -125,7 +128,7 @@
             </div>
         </section>
 
-     <section>
+        <section>
             <div class="icon-section">
                 <div class="icon">
                     <img src="images/Rectangle 11.png" alt="">
@@ -164,7 +167,7 @@
                     <p>Strategy Games</p>
                 </div>
             </div>
-        </section> 
+        </section>
     </main>
     <footer>
         <div class="footer-container">
@@ -197,7 +200,7 @@
                 </div>
                 <p class="copy-right">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
             </div>
-          
+
         </div>
     </footer>
 </body>
